--- a/HTML DEMO 2/HTML2.html
+++ b/HTML DEMO 2/HTML2.html
@@ -11,7 +11,7 @@
 
 
 <div class="header">
-  <img src="/Users/user/Downloads/SOFTWARE DEVELOPMENT/HTML DEMO 2/FOTO CIUDAD MAPA.jpg" alt="logo" />
+  <img src="./FOTO CIUDAD MAPA.jpg" alt="logo" />
   <h1>CIUDADES DE INTERES</h1>
 </div></br>
 
@@ -28,9 +28,9 @@ Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit ame
 
 <h2>Berlin</h2>
 
-<a href="http://www.google.com">Enlace a una página sobre Berlin </a></br>
+<a href="https://en.wikipedia.org/wiki/Berlin">Enlace a una página sobre Berlin </a></br>
 
-<img class="ciudad" src="/Users/user/Downloads/SOFTWARE DEVELOPMENT/HTML DEMO 2/FOTO DE BERLIN.jpg">
+<img class="ciudad" src="./FOTO DE BERLIN.jpg">
 
 <h3>RECOMENDACIONES</h3>
 
